--- a/command/requirements.txt
+++ b/command/requirements.txt
@@ -23,6 +23,7 @@ importlib-metadata==6.7.0
 msgpack==1.0.5
 numpy==1.21.6
 opencv-python==4.5.5.64
+picamera==1.13
 pkg_resources==0.0.0
 proto-plus==1.24.0
 protobuf==4.24.4
@@ -33,6 +34,7 @@ PyJWT==2.8.0
 pyparsing==3.1.4
 python-dotenv==0.21.1
 requests==2.31.0
+RPi.GPIO==0.7.1
 rsa==4.9
 tflite-runtime==2.11.0
 typing_extensions==4.7.1
